# dino_toy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  partitions-16MB.csv  sdkconfig.defaults
.claude/: settings.local.json
components/BSP/: CMakeLists.txt  Kconfig
components/BSP/BUTTON/: button.cpp  button.h
components/BSP/CLOUD_CHAT/: cloud_chat.cpp  cloud_chat.h
components/BSP/CLOUD_TTS/: cloud_tts.cpp  cloud_tts.h
components/BSP/DISPLAY/: display.cpp  display.h
components/BSP/LED/: led.cpp  led.h
components/BSP/MP3_PLAYER/: mp3_player.cpp  mp3_player.h
components/BSP/OTA/: ota.cpp  ota.h
components/BSP/SERVO/: servo.cpp  servo.h
components/BSP/STATE_MACHINE/: device_state.h  device_state_machine.cpp  device_state_machine.h
components/BSP/VOICE_CONTROL/: voice_control.cpp  voice_control.h
components/BSP/VOICE_DIALOG/: voice_dialog.cpp  voice_dialog.h
components/BSP/WAKE_WORD/: wake_word.cpp  wake_word.h
components/BSP/WEBSOCKET_CHAT/: websocket_chat.cpp  websocket_chat.h
components/BSP/WIFI/: wifi_manager.cpp  wifi_manager.h  wifi_sta.cpp  wifi_sta.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
server/qwen_tts_proxy/: README.md  app.py  requirements.txt
